security/cloud-armor-integration/hello-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app-container
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
