security/cloud-armor-integration/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: hello
  labels:
    app: hello-app
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"test-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
