security/cloud-armor-integration/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginx
  name: nginx
  namespace: web
spec:
  ports:
    - port: 80
  selector:
    app: nginx
  type: LoadBalancer
